# lance-duckdb

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  extension_config.cmake  test_extension.sql  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  build.yml
cpp/: lance_copy.cpp  lance_extension.cpp  lance_replacement.cpp  lance_scan.cpp
examples/: create_test_data.py  usage.sql
include/: lance_extension.hpp
rust/: lib.rs  reader.rs  scanner.rs  types.rs  writer.rs
src/: lance_extension.cpp  lance_scan.cpp  lance_scan.rs  lib.rs  reader.rs  replacement_scan.rs  types.rs
src/cpp/: lance_scan.cpp
src/include/: lance_extension.hpp
test/sql/: lance.test  lance_duckdb.test  lance_scan.test
test/test_data.lance/_transactions/: 0-626ae200-e271-415d-9afc-3ee601457bac.txn
test/test_data.lance/_versions/: 1.manifest
test/test_data.lance/data/: 9c687b1c-075b-430c-8be1-672d2b959ad6.lance
