[package]
name = "lance_duckdb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.3.2", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.9"
libduckdb-sys = { version = "1.3.2", features = ["loadable-extension"] }

# Lance and Arrow dependencies - using compatible versions
lance = "0.32.1"
arrow = "55.1"
arrow-array = "55.1"
arrow-schema = "55.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
