[package]
name = "lance_duckdb_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "lance_duckdb_ffi"
crate-type = ["staticlib"]

[profile.release]
lto = true
strip = true

[dependencies]

# Lance and Arrow dependencies - using compatible versions
lance = "0.32.1"
arrow = "55.1"
arrow-array = "55.1"
arrow-schema = "55.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
